--- a/source/index.html
+++ b/source/index.html
@@ -155,11 +155,14 @@
         <!-- /.advantages -->
 
         <section class="booking">
-          <div class="booking__header">
-            <h2 class="booking__title text-title text-title--promo">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
-            <p class="booking__text text-description text-description--sub">Укажите предполагаемые датыпоездки, и мы покажем вам лучшиепредложения гостиниц в седоне</p>
+          <div class="booking__wrapper">
+            <div class="booking__header">
+              <h2 class="booking__title text-title text-title--promo">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
+              <p class="booking__text text-description text-description--sub">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+            </div>
+            <button class="button button--booking">НАЙТИ гостиницу</button>
           </div>
-          <button class="button button--booking">НАЙТИ гостиницу</button>
+          <!-- /.booking__wrapper -->
         </section>
         <!-- /.booking -->
 
