--- a/source/photo.html
+++ b/source/photo.html
@@ -119,15 +119,18 @@
       <!-- /.gallery -->
 
       <section class="video">
-        <div class="video__header">
-          <h2 class="video__title text-title">Все еще сомневаетесь?</h2>
-          <p class="video__text text-description text-description--sub">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-        </div>
-        <div class="video__content">
-          <img src="img/video-mobile@1x.jpg" alt="Видео" class="video__img">
-          <div class="video__player-interface">
+        <div class="video__wrapper">
+          <div class="video__header">
+            <h2 class="video__title text-title">Все еще сомневаетесь?</h2>
+            <p class="video__text text-description text-description--sub">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+          </div>
+          <div class="video__content">
+            <img src="img/video-mobile@1x.jpg" alt="Видео" class="video__img">
+            <div class="video__player-interface">
+            </div>
           </div>
         </div>
+        <!-- /.video__wrapper -->
       </section>
       <!-- /.video -->
     </div>
