Коммит для публикации кода наставнику

--- a/source/form.html
+++ b/source/form.html
@@ -63,18 +63,18 @@
         <!-- /.review__header -->
         <form action="https://echo.htmlacademy.ru" method="POST" class="review-form">
           <div class="review-form__group form-group form-group--name">
-            <h2 class="form-group__title text-title">Представьтесь:</h2>
+            <h2 class="form-group__title form-group__title--name text-title ">Представьтесь:</h2>
             <div class="form-group__list">
               <div class="form-group__item">
-                <label for="firstname" class="label label--text">ИМЯ*:</label>
+                <label for="firstname" class="label label--text label--name">ИМЯ*:</label>
                 <input type="text" class="field field--text" name="firstname" id="firstname" value="Петр" required>
               </div>
               <div class="form-group__item">
-                <label for="lastname" class="label label--text">ФАМИЛИЯ*:</label>
+                <label for="lastname" class="label label--text label--name">ФАМИЛИЯ*:</label>
                 <input type="text" class="field field--text" name="lastname" id="lastname" value="Иванов" required>
               </div>
               <div class="form-group__item">
-                <label for="middlename" class="label label--text">ОТЧЕСТВО:</label>
+                <label for="middlename" class="label label--text label--name">ОТЧЕСТВО:</label>
                 <input type="text" class="field field--text" name="middlename" id="middlename" value="Александрович" required>
               </div>
             </div>
@@ -102,7 +102,7 @@
           </div>
           <!-- /.form-group -->
           <div class="review-form__group form-group form-group--impression">
-            <h2 class="form-group__title text-title">Ваше Общее впечатление:</h2>
+            <h2 class="form-group__title form-group__title--impression text-title">Ваше Общее впечатление:</h2>
             <div class="form-group__item">
               <input type="radio" class="hidden" name="impression" id="positive" value="positive" checked>
               <label for="positive" class="label label--selection">Скорее положительное</label>
