--- a/source/index.html
+++ b/source/index.html
@@ -13,14 +13,14 @@
         <a class="page-header__logo">
           <img src="img/logo-sedona-mobile.svg" alt="Логотип">
         </a>
-        <nav class="main-nav">
+        <nav class="main-nav main-nav--opened main-nav--nojs">
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
           <div class="main-nav__wrapper">
-            <button class="main-nav__toggle" type="button">
-              <span class="visually-hidden">Открыть меню</span>
-            </button>
             <ul class="main-nav__list site-list">
               <li class="site-list__item site-list__item--active">
-                <a class="site-list__link" href="#">Главная</a>
+                <a class="site-list__link">Главная</a>
               </li>
               <li class="site-list__item">
                 <a class="site-list__link" href="photo.html">Фото и видео</a>
