Скрипт и декор оформление для меню, декор элемент для intro на главной, иконки и стили для detail

--- a/source/photo.html
+++ b/source/photo.html
@@ -164,5 +164,7 @@
     <!-- /.page-footer__wrapper -->
   </footer>
   <!-- /.page-footer -->
+
+  <script type="text/javascript" src="js/main-nav.js"></script>
 </body>
 </html>
