--- a/source/index.html
+++ b/source/index.html
@@ -80,7 +80,7 @@
           <li class="advantages__item advantage advantage--explicit">
             <div class="advantage__header advantage__header--explicit">
               <div class="advantage__header-wrapper">
-                <h3 class="advantage__title advantage__title--explicit text-title">НАСТОЯЩИЙ ГОРОДОК</h3>
+                <h3 class="advantage__title advantage__title--explicit text-title">НАСТОЯЩИЙ<br> ГОРОДОК</h3>
                 <p class="advantage__number advantage__number--explicit text-description">— №1 —</p>
                 <p class="advantage__description advantage__description--explicit text-description">СЕДОНА НЕ АТТРАКЦИОН
                   ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
@@ -161,10 +161,10 @@
           <li class="advantages__item advantage advantage--explicit advantage--reverse">
             <div class="advantage__header advantage__header--explicit">
               <div class="advantage__header-wrapper">
-                <h3 class="advantage__title advantage__title--explicit text-title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+                <h3 class="advantage__title advantage__title--explicit text-title">ТАМ ЕСТЬ<br> МОСТ ДЬЯВОЛА</h3>
                 <p class="advantage__number advantage__number--explicit text-description">— №2 —</p>
                 <p class="advantage__description advantage__description--explicit text-description">Да, по нему можно
-                  пройти! Если вы осмелитесь, конечно</p>
+                  пройти!<br> Если вы осмелитесь, конечно</p>
               </div>
             </div>
             <img class="advantage__img" src="img/main-bridge-mobile@1x.jpg" alt="Фото города">
@@ -173,7 +173,7 @@
           <li class="advantages__item advantage">
             <div class="advantage__header">
               <div class="advantage__header-wrapper">
-                <h3 class="advantage__title text-title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+                <h3 class="advantage__title text-title">НЕБОЛЬШАЯ<br> ПЛОЩАДЬ</h3>
                 <p class="advantage__number text-description">— №3 —</p>
                 <p class="advantage__description text-description">ВСЕ интересные места находятся очень близко</p>
               </div>
@@ -183,9 +183,9 @@
           <li class="advantages__item advantage">
             <div class="advantage__header">
               <div class="advantage__header-wrapper">
-                <h3 class="advantage__title text-title">КРАСИВАЯ ДОРОГА</h3>
+                <h3 class="advantage__title text-title">КРАСИВАЯ<br> ДОРОГА</h3>
                 <p class="advantage__number text-description">— №4 —</p>
-                <p class="advantage__description text-description">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!</p>
+                <p class="advantage__description text-description">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем<br> НЕ СКУЧНО!</p>
               </div>
             </div>
           </li>
@@ -193,7 +193,7 @@
           <li class="advantages__item advantage">
             <div class="advantage__header">
               <div class="advantage__header-wrapper">
-                <h3 class="advantage__title text-title">МАЛО ТУРИСТОВ</h3>
+                <h3 class="advantage__title text-title">МАЛО<br> ТУРИСТОВ</h3>
                 <p class="advantage__number text-description">— №5 —</p>
                 <p class="advantage__description text-description">Большинство едет в гранд каньон и толпится там</p>
               </div>
