--- a/source/photo.html
+++ b/source/photo.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html class="page" lang="en">
+
 <head>
-  <meta name="viewport"
-    content="width=device-width,initial-scale=1"
-    charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1" charset="utf-8">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body class="page__body">
   <header class="page-header">
     <div class="page-header__wrapper">
@@ -57,7 +57,8 @@
       <section class="gallery">
         <header class="gallery__header">
           <h2 class="gallery__title text-title">Фото и видео</h2>
-          <p class="gallery__text text-description text-description--sub">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+          <p class="gallery__text text-description text-description--sub">Не можете решиться на путешествие из-за курса?
+            Фотографии помогут вам забыть о политике и экономике.</p>
         </header>
 
         <ul class="gallery__list">
@@ -69,7 +70,13 @@
                 <p class="card-info__author">Автор фото: Борис</p>
               </div>
               <div class="card-info__likes likes">
-                <div class="likes__icon"></div>
+                <div class="likes__icon">
+                  <svg class="likes-icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path opacity="0.3"
+                      d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z"
+                      fill="black" />
+                  </svg>
+                </div>
                 <div class="likes__counter">1350</div>
               </div>
             </div>
@@ -82,7 +89,13 @@
                 <p class="card-info__author">Автор фото: Сергей</p>
               </div>
               <div class="card-info__likes likes">
-                <div class="likes__icon"></div>
+                <div class="likes__icon">
+                  <svg class="likes-icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path opacity="0.3"
+                      d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z"
+                      fill="black" />
+                  </svg>
+                </div>
                 <div class="likes__counter">143</div>
               </div>
             </div>
@@ -95,7 +108,13 @@
                 <p class="card-info__author">Автор фото: Петр</p>
               </div>
               <div class="card-info__likes likes">
-                <div class="likes__icon"></div>
+                <div class="likes__icon">
+                  <svg class="likes-icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path opacity="0.3"
+                      d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z"
+                      fill="black" />
+                  </svg>
+                </div>
                 <div class="likes__counter">96</div>
               </div>
             </div>
@@ -108,7 +127,13 @@
                 <p class="card-info__author">Автор фото: Антон</p>
               </div>
               <div class="card-info__likes likes">
-                <div class="likes__icon"></div>
+                <div class="likes__icon">
+                  <svg class="likes-icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path opacity="0.3"
+                      d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z"
+                      fill="black" />
+                  </svg>
+                </div>
                 <div class="likes__counter">254</div>
               </div>
             </div>
@@ -122,7 +147,8 @@
         <div class="video__wrapper">
           <div class="video__header">
             <h2 class="video__title text-title">Все еще сомневаетесь?</h2>
-            <p class="video__text text-description text-description--sub">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+            <p class="video__text text-description text-description--sub">Смотрите видеопрезентацию и скорее за
+              билетами, пока они не подорожали в очередной раз!</p>
           </div>
           <div class="video__content">
             <img src="img/video-mobile@1x.jpg" alt="Видео" class="video__img">
@@ -167,4 +193,5 @@
 
   <script type="text/javascript" src="js/main-nav.js"></script>
 </body>
+
 </html>
