--- a/source/form.html
+++ b/source/form.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html class="page" lang="en">
+
 <head>
-  <meta name="viewport"
-    content="width=device-width,initial-scale=1"
-    charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1" charset="utf-8">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body class="page__body">
   <header class="page-header">
     <div class="page-header__wrapper">
@@ -51,6 +51,7 @@
         <div class="page-intro__background">
           <img src="img/text-sedona.svg" alt="SEDONA" class="page-intro__img">
         </div>
+        <div class="intro-decoration"></div>
       </div>
 
       <section class="review">
@@ -75,7 +76,8 @@
               </div>
               <div class="form-group__item">
                 <label for="middlename" class="label label--text label--name">ОТЧЕСТВО:</label>
-                <input type="text" class="field field--text" name="middlename" id="middlename" value="Александрович" required>
+                <input type="text" class="field field--text" name="middlename" id="middlename" value="Александрович"
+                  required>
               </div>
             </div>
           </div>
@@ -86,14 +88,16 @@
               <div class="form-group__item form-group__item--contact">
                 <label for="tel" class="label label--text">Контактный телефон*:</label>
                 <div class="form-group__fields">
-                  <input type="tel" class="field field--text" name="tel" id="tel" placeholder="Введите телефон" required>
+                  <input type="tel" class="field field--text" name="tel" id="tel" placeholder="Введите телефон"
+                    required>
                   <div class="field-icon field-icon--tel"></div>
                 </div>
               </div>
               <div class="form-group__item form-group__item--contact">
                 <label for="email" class="label label--text">Электронная почта*:</label>
                 <div class="form-group__fields">
-                  <input type="email" class="field field--text" name="email" id="email" placeholder="Введите e-mail" required>
+                  <input type="email" class="field field--text" name="email" id="email" placeholder="Введите e-mail"
+                    required>
                   <div class="field-icon field-icon--email"></div>
                 </div>
               </div>
@@ -141,7 +145,8 @@
           <!-- /.form-group -->
           <div class="review-form__group form-group form-group--feedback">
             <h2 class="form-group__title text-title">Опишите свои эмоции:</h2>
-            <textarea class="field field--area" name="comment" id="comment" cols="" rows="" placeholder="Опишите подробно все свои восторги"></textarea>
+            <textarea class="field field--area" name="comment" id="comment" cols="" rows=""
+              placeholder="Опишите подробно все свои восторги"></textarea>
           </div>
           <!-- /.form-group -->
           <div class="review-form__group form-group form-group--submit">
@@ -162,20 +167,36 @@
       <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
-            <a href="#" class="social__link social__link--twitter">Мы в Twitter</a>
+            <a href="#" class="social__link social__link--twitter">
+              <span class="visually-hidden">Мы в Twitter</span>
+              <img class="social__link-icon" src="img/icon-twitter.svg" alt="Twitter">
+            </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--facebook">Мы на Facebook</a>
+            <a href="#" class="social__link social__link--facebook">
+              <span class="visually-hidden">Мы на Facebook</span>
+              <img class="social__link-icon" src="img/icon-facebook.svg" alt="Facebook">
+            </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--youtube">Мы на YouTube</a>
+            <a href="#" class="social__link social__link--youtube">
+              <span class="visually-hidden">Мы на YouTube</span>
+              <img class="social__link-icon" src="img/icon-youtube.svg" alt="YouTube">
+            </a>
           </li>
         </ul>
       </div>
       <!-- /.social -->
       <div class="page-footer__copyright copyright">
         <span class="copyright__text text-copyright">Разработано</span>
-        <div class="copyright__icon"></div>
+        <a class="copyright__link">
+          <svg class="copyright__icon" width="27" height="34" viewBox="0 0 27 35" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z"
+              fill="black" />
+          </svg>
+        </a>
       </div>
       <!-- /.copyright -->
     </div>
@@ -185,4 +206,5 @@
 
   <script type="text/javascript" src="js/main-nav.js"></script>
 </body>
+
 </html>
