--- a/source/index.html
+++ b/source/index.html
@@ -55,7 +55,7 @@
           <div class="intro__background">
             <img src="img/text-sedona-index.svg" alt="Welcome to SEDONA" class="intro__background-img">
           </div>
-          <div class="intro__header-decor"></div>
+          <div class="intro-decoration"></div>
         </header>
         <div class="intro__description">
           <h3 class="intro__title text-title">
@@ -67,8 +67,8 @@
         </div>
         <div class="intro__description-decor">
           <svg width="auto" height="37" viewBox="0 0 320 37" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M-225 0H159V37L-225 0Z" fill="white"/>
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M543 0H159V37L543 0Z" fill="white"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M-225 0H159V37L-225 0Z" fill="white" />
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M543 0H159V37L543 0Z" fill="white" />
           </svg>
         </div>
       </section>
@@ -103,6 +103,12 @@
                       fill="#81B3D2" />
                     <path d="M10.3895 21.0613H8.82324V23.0452H10.3895V21.0613Z" fill="#81B3D2" />
                     <path d="M13.4698 21.0613H11.9036V23.0452H13.4698V21.0613Z" fill="#81B3D2" />
+                    <path d="M10.3895 24.1128H8.82324V26.0968H10.3895V24.1128Z" fill="#81B3D2" />
+                    <path d="M13.4698 24.1128H11.9036V26.0968H13.4698V24.1128Z" fill="#81B3D2" />
+                    <path d="M27.0443 21.0613H25.478V23.0452H27.0443V21.0613Z" fill="#81B3D2" />
+                    <path d="M30.1769 21.0613H28.6106V23.0452H30.1769V21.0613Z" fill="#81B3D2" />
+                    <path d="M27.0443 24.1128H25.478V26.0968H27.0443V24.1128Z" fill="#81B3D2" />
+                    <path d="M30.1769 24.1128H28.6106V26.0968H30.1769V24.1128Z" fill="#81B3D2" />
                   </svg>
                 </div>
                 <div class="detail__header">
@@ -130,10 +136,10 @@
                   <svg class="detail-icon detail-icon--food" width="40" height="35" viewBox="0 0 40 35" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
-                      d="M37.7428 23.3004H2.25722C0.997375 23.3004 0 24.3135 0 25.4785V27.2514C0 28.4164 0.997375 29.3788 2.25722 29.3788H2.78215V29.8853C2.78215 32.6712 5.14436 34.9 7.979 34.9H32.021C34.9081 34.9 37.2179 32.6206 37.2179 29.8853V29.3788H37.7428C38.9501 29.3788 40 28.4164 40 27.2007V25.4278C40 24.3135 39.0026 23.3004 37.7428 23.3004ZM35.6955 29.8853C35.6955 31.8101 34.0682 33.3804 32.0735 33.3804H7.92651C5.93176 33.3804 4.30446 31.8101 4.30446 29.8853V29.3788H35.6955V29.8853ZM38.4252 27.2007C38.4252 27.5553 38.1102 27.8592 37.7428 27.8592H2.25722C1.88976 27.8592 1.5748 27.5553 1.5748 27.2007V25.4278C1.5748 25.1239 1.88976 24.82 2.25722 24.82H37.7953C38.1627 24.82 38.4777 25.1239 38.4777 25.4785V27.2007H38.4252Z"
+                      d="M37.7428 23.3004H2.25722C0.997375 23.3004 0 24.3135 0 25.4785V27.2514C0 28.4164 0.997375 29.3788 2.25722 29.3788H2.78215V29.8853C2.78215 32.6712 5.14436 34.9 7.979 34.9H32.021C34.9081 34.9 37.2178 32.6206 37.2178 29.8853V29.3788H37.7428C38.9501 29.3788 40 28.4164 40 27.2007V25.4278C40 24.3135 39.0026 23.3004 37.7428 23.3004ZM35.6955 29.8853C35.6955 31.8101 34.0682 33.3804 32.0735 33.3804H7.92651C5.93176 33.3804 4.30446 31.8101 4.30446 29.8853V29.3788H35.6955V29.8853ZM38.4252 27.2007C38.4252 27.5553 38.1102 27.8592 37.7428 27.8592H2.25722C1.88976 27.8592 1.5748 27.5553 1.5748 27.2007V25.4278C1.5748 25.1239 1.88976 24.82 2.25722 24.82H37.7953C38.1627 24.82 38.4777 25.1239 38.4777 25.4785V27.2007H38.4252Z"
                       fill="#81B3D2" />
                     <path
-                      d="M8.50396 19.1973L11.3386 21.2234L14.2257 19.1973L17.1129 21.2234L20 19.1973L22.8347 21.2234L25.7218 19.1973L28.6089 21.2234L31.4961 19.1973L34.3832 21.2234L37.6903 18.8427L36.7979 17.627L34.3832 19.2986L31.4961 17.2725L28.6089 19.2986L25.7218 17.2725L22.8347 19.2986L20 17.2725L17.1129 19.2986L14.2257 17.2725L11.3386 19.2986L8.50396 17.2725L5.61681 19.2986L3.20212 17.627L2.25723 18.8427L5.61681 21.2234L8.50396 19.1973Z"
+                      d="M8.50395 19.1973L11.3386 21.2234L14.2257 19.1973L17.1129 21.2234L20 19.1973L22.8347 21.2234L25.7218 19.1973L28.6089 21.2234L31.4961 19.1973L34.3832 21.2234L37.6903 18.8427L36.7979 17.627L34.3832 19.2986L31.4961 17.2725L28.6089 19.2986L25.7218 17.2725L22.8347 19.2986L20 17.2725L17.1129 19.2986L14.2257 17.2725L11.3386 19.2986L8.50395 17.2725L5.61682 19.2986L3.20212 17.627L2.25723 18.8427L5.61682 21.2234L8.50395 19.1973Z"
                       fill="#81B3D2" />
                     <path
                       d="M37.2179 15.7531C37.2179 15.4492 37.2704 14.4361 37.2179 14.2335C36.8504 6.33164 29.2913 0 20 0C10.7087 0 3.09712 6.33164 2.72967 14.2335C2.72967 14.4361 2.72967 15.4492 2.72967 15.7531H37.2179ZM20 1.51959C28.399 1.51959 35.3281 7.19274 35.6431 14.2335H4.30447C4.67193 7.19274 11.6011 1.51959 20 1.51959Z"
@@ -149,6 +155,7 @@
                       fill="#81B3D2" />
                   </svg>
                 </div>
+
                 <div class="detail__header">
                   <p class="detail__title text-title text-title--detail">ЕДА</p>
                   <p class="detail__description text-description">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ
@@ -185,7 +192,8 @@
               <div class="advantage__header-wrapper">
                 <h3 class="advantage__title text-title">КРАСИВАЯ<br> ДОРОГА</h3>
                 <p class="advantage__number text-description">— №4 —</p>
-                <p class="advantage__description text-description">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем<br> НЕ СКУЧНО!</p>
+                <p class="advantage__description text-description">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем<br> НЕ СКУЧНО!
+                </p>
               </div>
             </div>
           </li>
@@ -235,20 +243,36 @@
       <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
-            <a href="#" class="social__link social__link--twitter">Мы в Twitter</a>
+            <a href="#" class="social__link social__link--twitter">
+              <span class="visually-hidden">Мы в Twitter</span>
+              <img class="social__link-icon" src="img/icon-twitter.svg" alt="Twitter">
+            </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--facebook">Мы на Facebook</a>
+            <a href="#" class="social__link social__link--facebook">
+              <span class="visually-hidden">Мы на Facebook</span>
+              <img class="social__link-icon" src="img/icon-facebook.svg" alt="Facebook">
+            </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--youtube">Мы на YouTube</a>
+            <a href="#" class="social__link social__link--youtube">
+              <span class="visually-hidden">Мы на YouTube</span>
+              <img class="social__link-icon" src="img/icon-youtube.svg" alt="YouTube">
+            </a>
           </li>
         </ul>
       </div>
       <!-- /.social -->
       <div class="page-footer__copyright copyright">
         <span class="copyright__text text-copyright">Разработано</span>
-        <div class="copyright__icon"></div>
+        <a class="copyright__link">
+          <svg class="copyright__icon" width="27" height="34" viewBox="0 0 27 35" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z"
+              fill="black" />
+          </svg>
+        </a>
       </div>
       <!-- /.copyright -->
     </div>
