более универсальный стиль для декора page-intro

--- a/source/photo.html
+++ b/source/photo.html
@@ -51,7 +51,7 @@
         <div class="page-intro__background">
           <img src="img/text-sedona.svg" alt="SEDONA" class="page-intro__img">
         </div>
-        <div class="intro-decoration"></div>
+        <div class="page-intro__decoration"></div>
       </div>
 
       <section class="gallery">
