--- a/source/index.html
+++ b/source/index.html
@@ -47,7 +47,7 @@
       <h1 class="visually-hidden">
         Поиск отелей в городе СЕДОНА, штат Аризона.
       </h1>
-      <section class="intro">
+      <section class="intro page-intro">
         <header class="intro__header">
           <h2 class="visually-hidden">
             Приветствие
@@ -55,7 +55,7 @@
           <div class="intro__background">
             <img src="img/text-sedona-index.svg" alt="Welcome to SEDONA" class="intro__background-img">
           </div>
-          <div class="intro-decoration"></div>
+          <div class="page-intro__decoration"></div>
         </header>
         <div class="intro__description">
           <h3 class="intro__title text-title">
