добавил разрывы строк в текст. блоки у detail, booking, gallery и стили их отображения

--- a/source/index.html
+++ b/source/index.html
@@ -128,7 +128,7 @@
                 </div>
                 <div class="detail__header">
                   <p class="detail__title text-title text-title--detail">СУВЕНИРЫ</p>
-                  <p class="detail__description text-description">Не только китайского, но и местного производства!</p>
+                  <p class="detail__description text-description">Не только китайского,<br> но и местного производства!</p>
                 </div>
               </div>
               <div class="detail__item detail__item--food">
@@ -217,7 +217,7 @@
         <div class="booking__wrapper">
           <div class="booking__header">
             <h2 class="booking__title text-title text-title--promo">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
-            <p class="booking__text text-description text-description--sub">Укажите предполагаемые даты поездки, и мы
+            <p class="booking__text text-description text-description--sub">Укажите предполагаемые даты поездки,<br> и мы
               покажем вам лучшие предложения гостиниц в седоне</p>
           </div>
           <button class="button button--booking">НАЙТИ гостиницу</button>
