--- a/source/photo.html
+++ b/source/photo.html
@@ -57,7 +57,7 @@
       <section class="gallery">
         <header class="gallery__header">
           <h2 class="gallery__title text-title">Фото и видео</h2>
-          <p class="gallery__text text-description text-description--sub">Не можете решиться на путешествие из-за курса?
+          <p class="gallery__text text-description text-description--sub">Не можете решиться на путешествие из-за курса?<br>
             Фотографии помогут вам забыть о политике и экономике.</p>
         </header>
 
