--- a/source/index.html
+++ b/source/index.html
@@ -66,7 +66,7 @@
           </p>
         </div>
         <div class="intro__description-decor">
-          <svg width="auto" height="37" viewBox="0 0 320 37" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg width="100%" height="37" viewBox="0 0 320 37" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M-225 0H159V37L-225 0Z" fill="white" />
             <path fill-rule="evenodd" clip-rule="evenodd" d="M543 0H159V37L543 0Z" fill="white" />
           </svg>
