реоргазизация разметки формы для декора

--- a/source/form.html
+++ b/source/form.html
@@ -88,7 +88,12 @@
           </div>
           <!-- /.form-group -->
           <div class="review-form__group form-group form-group--contact">
-            <h2 class="form-group__title form-group__title--contact text-title">Контактная информация:</h2>
+            <div class="form-group__title-wrapper form-group__title-wrapper--contact">
+              <span class="form-group__title-decor"></span>
+              <h2 class="form-group__title form-group__title--contact text-title">Контактная информация:</h2>
+              <span class="form-group__title-decor"></span>
+            </div>
+
             <div class="form-group__list form-group__list--contact">
               <div class="form-group__item form-group__item--contact form-group__item--phone">
                 <label for="tel" class="label label--contact label--phone label--text"><span>Контактный </span>телефон*:</label>
@@ -127,7 +132,12 @@
           </div>
           <!-- /.form-group -->
           <div class="review-form__group form-group form-group--sights">
-            <h2 class="form-group__title form-group__title--sights text-title">Посещенные<br> достопримечательности:</h2>
+            <div class="form-group__title-wrapper form-group__title-wrapper--sights">
+              <span class="form-group__title-decor"></span>
+              <h2 class="form-group__title form-group__title--sights text-title">Посещенные<br> достопримечательности:</h2>
+              <span class="form-group__title-decor"></span>
+            </div>
+
             <div class="form-group__checklist checklist">
               <div class="form-group__item form-group__item--sights checklist__item">
                 <input type="checkbox" class="select hidden" name="bridge" id="bridge" checked>
@@ -149,7 +159,12 @@
           </div>
           <!-- /.form-group -->
           <div class="review-form__group form-group form-group--feedback">
-            <h2 class="form-group__title text-title">Опишите свои эмоции:</h2>
+            <div class="form-group__title-wrapper form-group__title-wrapper--feedback">
+              <span class="form-group__title-decor"></span>
+              <h2 class="form-group__title form-group__title--feedback text-title">Опишите свои эмоции:</h2>
+              <span class="form-group__title-decor"></span>
+            </div>
+
             <textarea class="field field--area" name="comment" id="comment"
               placeholder="Опишите подробно все свои восторги"></textarea>
           </div>
