для button-close убрал скриптовые стили, сделал отображение через классы; декор заголовков в форме через псевдоэлементы; стилизация интерфейса видео-плеера

--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
         </button>
       </div>
       <nav class="main-nav main-nav--closed main-nav--nojs">
-        <button class="page-header__button button-cross" type="button">
+        <button class="page-header__button main-nav__button main-nav__button--hidden button-cross" type="button">
           <span class="visually-hidden">Закрыть меню</span>
         </button>
         <div class="main-nav__wrapper">
