--- a/source/form.html
+++ b/source/form.html
@@ -19,7 +19,7 @@
         </button>
       </div>
       <nav class="main-nav main-nav--closed main-nav--nojs">
-        <button class="page-header__button button-cross" type="button">
+        <button class="page-header__button main-nav__button main-nav__button--hidden button-cross" type="button">
           <span class="visually-hidden">Закрыть меню</span>
         </button>
         <div class="main-nav__wrapper">
@@ -89,11 +89,8 @@
           <!-- /.form-group -->
           <div class="review-form__group form-group form-group--contact">
             <div class="form-group__title-wrapper form-group__title-wrapper--contact">
-              <span class="form-group__title-decor"></span>
               <h2 class="form-group__title form-group__title--contact text-title">Контактная информация:</h2>
-              <span class="form-group__title-decor"></span>
             </div>
-
             <div class="form-group__list form-group__list--contact">
               <div class="form-group__item form-group__item--contact form-group__item--phone">
                 <label for="tel" class="label label--contact label--phone label--text"><span>Контактный </span>телефон*:</label>
@@ -133,11 +130,8 @@
           <!-- /.form-group -->
           <div class="review-form__group form-group form-group--sights">
             <div class="form-group__title-wrapper form-group__title-wrapper--sights">
-              <span class="form-group__title-decor"></span>
               <h2 class="form-group__title form-group__title--sights text-title">Посещенные<br> достопримечательности:</h2>
-              <span class="form-group__title-decor"></span>
             </div>
-
             <div class="form-group__checklist checklist">
               <div class="form-group__item form-group__item--sights checklist__item">
                 <input type="checkbox" class="select hidden" name="bridge" id="bridge" checked>
@@ -160,11 +154,8 @@
           <!-- /.form-group -->
           <div class="review-form__group form-group form-group--feedback">
             <div class="form-group__title-wrapper form-group__title-wrapper--feedback">
-              <span class="form-group__title-decor"></span>
               <h2 class="form-group__title form-group__title--feedback text-title">Опишите свои эмоции:</h2>
-              <span class="form-group__title-decor"></span>
             </div>
-
             <textarea class="field field--area" name="comment" id="comment"
               placeholder="Опишите подробно все свои восторги"></textarea>
           </div>
