добавил блоки popup, почистил стили form-group

--- a/source/form.html
+++ b/source/form.html
@@ -164,7 +164,16 @@
             <button class="button button--submit">ОТПРАВИТЬ ОТЗЫВ</button>
             <span class="review-form__notif">* — обязательные поля</span>
           </div>
+          <div class="popup popup--success">
+            <p class="popup__title text-title">Ваш отзыв отправлен!</p>
+            <p class="popup__text text-description">Спасибо за ваше участие, ваш отзыв уже поступил к нам.В ближайшее время мы опубликуем его на сайте.</p>
+          </div>
+          <div class="popup popup--failure">
+            <p class="popup__title text-title">ЧТО-ТО ПОШЛО НЕ ТАК!</p>
+            <p class="popup__text text-description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+          </div>
           <!-- /.form-group -->
+
         </form>
         <!-- /.review-form -->
       </section>
