--- a/source/form.html
+++ b/source/form.html
@@ -67,7 +67,7 @@
           </p>
         </div>
         <!-- /.review__header -->
-        <form action="https://echo.htmlacademy.ru" method="POST" class="review-form">
+        <form action="https://echo.htmlacademy.ru" method="POST" class="review-form" id="review-form">
           <div class="review-form__group form-group form-group--name">
             <h2 class="form-group__title form-group__title--name text-title ">Представьтесь:</h2>
             <div class="form-group__list">
@@ -93,18 +93,19 @@
             </div>
             <div class="form-group__list form-group__list--contact">
               <div class="form-group__item form-group__item--contact form-group__item--phone">
-                <label for="tel" class="label label--contact label--phone label--text"><span>Контактный </span>телефон*:</label>
+                <label for="tel" class="label label--contact label--phone label--text"><span>Контактный
+                  </span>телефон*:</label>
                 <div class="form-group__fields">
-                  <input type="tel" class="field field--phone field--text" name="tel" id="tel" placeholder="Введите телефон"
-                    required>
+                  <input type="tel" class="field field--phone field--text" name="tel" id="tel"
+                    placeholder="Введите телефон" required>
                   <div class="field-icon field-icon--phone"></div>
                 </div>
               </div>
               <div class="form-group__item form-group__item--contact">
                 <label for="email" class="label label--contact label--email label--text">Электронная почта*:</label>
                 <div class="form-group__fields">
-                  <input type="email" class="field field--email field--text" name="email" id="email" placeholder="Введите e-mail"
-                    required>
+                  <input type="email" class="field field--email field--text" name="email" id="email"
+                    placeholder="Введите e-mail" required>
                   <div class="field-icon field-icon--email"></div>
                 </div>
               </div>
@@ -130,7 +131,8 @@
           <!-- /.form-group -->
           <div class="review-form__group form-group form-group--sights">
             <div class="form-group__title-wrapper form-group__title-wrapper--sights">
-              <h2 class="form-group__title form-group__title--sights text-title">Посещенные<br> достопримечательности:</h2>
+              <h2 class="form-group__title form-group__title--sights text-title">Посещенные<br> достопримечательности:
+              </h2>
             </div>
             <div class="form-group__checklist checklist">
               <div class="form-group__item form-group__item--sights checklist__item">
@@ -161,19 +163,28 @@
           </div>
           <!-- /.form-group -->
           <div class="review-form__group form-group form-group--submit">
-            <button class="button button--submit">ОТПРАВИТЬ ОТЗЫВ</button>
+            <button form="review-form" class="button button--submit" type="submit">ОТПРАВИТЬ ОТЗЫВ</button>
             <span class="review-form__notif">* — обязательные поля</span>
           </div>
+          <!-- /.form-group -->
           <div class="popup popup--success">
-            <p class="popup__title text-title">Ваш отзыв отправлен!</p>
-            <p class="popup__text text-description">Спасибо за ваше участие, ваш отзыв уже поступил к нам.В ближайшее время мы опубликуем его на сайте.</p>
+            <div class="popup__header popup__header--success">
+              <p class="popup__title text-title">Ваш отзыв отправлен!</p>
+              <p class="popup__text text-description">Спасибо за ваше участие,<br> ваш отзыв уже поступил к нам.<br>В ближайшее
+                время мы<br> опубликуем его на сайте.</p>
+            </div>
+            <div class="popup__button-wrapper">
+              <button class="popup__button popup__button--success button button--popup">ЗАкРЫТЬ ОКНО</button>
+            </div>
           </div>
           <div class="popup popup--failure">
-            <p class="popup__title text-title">ЧТО-ТО ПОШЛО НЕ ТАК!</p>
-            <p class="popup__text text-description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+            <div class="popup__header popup__header--failure">
+              <p class="popup__title text-title">ЧТО-ТО ПОШЛО НЕ ТАК!</p>
+              <p class="popup__text text-description">Проверьте поля, выделенные<br> красным, скорее всего вы<br> забыли их
+                заполнить</p>
+            </div>
+            <button class="popup__button popup__button--failure button button--popup">OK</button>
           </div>
-          <!-- /.form-group -->
-
         </form>
         <!-- /.review-form -->
       </section>
