добавил wrapper для кнопки popup-failure

--- a/source/form.html
+++ b/source/form.html
@@ -173,7 +173,7 @@
               <p class="popup__text text-description">Спасибо за ваше участие,<br> ваш отзыв уже поступил к нам.<br>В ближайшее
                 время мы<br> опубликуем его на сайте.</p>
             </div>
-            <div class="popup__button-wrapper">
+            <div class="popup__button-wrapper popup__button-wrapper--success">
               <button class="popup__button popup__button--success button button--popup">ЗАкРЫТЬ ОКНО</button>
             </div>
           </div>
@@ -183,7 +183,9 @@
               <p class="popup__text text-description">Проверьте поля, выделенные<br> красным, скорее всего вы<br> забыли их
                 заполнить</p>
             </div>
-            <button class="popup__button popup__button--failure button button--popup">OK</button>
+            <div class="popup__button-wrapper popup__button-wrapper--failure">
+              <button class="popup__button popup__button--failure button button--popup">OK</button>
+            </div>
           </div>
         </form>
         <!-- /.review-form -->
