скрипт для попапов

--- a/source/form.html
+++ b/source/form.html
@@ -167,24 +167,24 @@
             <span class="review-form__notif">* — обязательные поля</span>
           </div>
           <!-- /.form-group -->
-          <div class="popup popup--success">
+          <div class="popup popup--success visually-hidden">
             <div class="popup__header popup__header--success">
               <p class="popup__title text-title">Ваш отзыв отправлен!</p>
               <p class="popup__text text-description">Спасибо за ваше участие,<br> ваш отзыв уже поступил к нам.<br>В ближайшее
                 время мы<br> опубликуем его на сайте.</p>
             </div>
             <div class="popup__button-wrapper popup__button-wrapper--success">
-              <button class="popup__button popup__button--success button button--popup">ЗАкРЫТЬ ОКНО</button>
+              <button class="popup__button popup__button--success button button--popup" type="button">ЗАкРЫТЬ ОКНО</button>
             </div>
           </div>
-          <div class="popup popup--failure">
+          <div class="popup popup--failure visually-hidden">
             <div class="popup__header popup__header--failure">
               <p class="popup__title text-title">ЧТО-ТО ПОШЛО НЕ ТАК!</p>
               <p class="popup__text text-description">Проверьте поля, выделенные<br> красным, скорее всего вы<br> забыли их
                 заполнить</p>
             </div>
             <div class="popup__button-wrapper popup__button-wrapper--failure">
-              <button class="popup__button popup__button--failure button button--popup">OK</button>
+              <button class="popup__button popup__button--failure button button--popup" type="button">OK</button>
             </div>
           </div>
         </form>
@@ -238,6 +238,7 @@
   <!-- /.page-footer -->
 
   <script type="text/javascript" src="js/main-nav.js"></script>
+  <script type="text/javascript" src="js/form-submit.js"></script>
 </body>
 
 </html>
