--- a/source/index.html
+++ b/source/index.html
@@ -226,7 +226,7 @@
             <p class="booking__text text-description text-description--sub">Укажите предполагаемые даты поездки,<br> и мы
               покажем вам лучшие предложения гостиниц в седоне</p>
           </div>
-          <button class="button button--booking">НАЙТИ гостиницу</button>
+          <button class="button button--booking" type="button">НАЙТИ гостиницу</button>
         </div>
         <!-- /.booking__wrapper -->
       </section>
