стили для невалидных элементов формы

--- a/source/form.html
+++ b/source/form.html
@@ -73,15 +73,15 @@
             <div class="form-group__list">
               <div class="form-group__item form-group__item--name">
                 <label for="firstname" class="label label--text label--name">ИМЯ*:</label>
-                <input type="text" class="field field--text" name="firstname" id="firstname" value="Петр" required>
+                <input type="text" class="field field--text" name="firstname" id="firstname" placeholder="Петр" required>
               </div>
               <div class="form-group__item form-group__item--name">
                 <label for="lastname" class="label label--text label--name">ФАМИЛИЯ*:</label>
-                <input type="text" class="field field--text" name="lastname" id="lastname" value="Иванов" required>
+                <input type="text" class="field field--text" name="lastname" id="lastname" placeholder="Иванов" required>
               </div>
               <div class="form-group__item  form-group__item--name">
                 <label for="middlename" class="label label--text label--name">ОТЧЕСТВО:</label>
-                <input type="text" class="field field--text" name="middlename" id="middlename" value="Александрович"
+                <input type="text" class="field field--text" name="middlename" id="middlename" placeholder="Александрович"
                   required>
               </div>
             </div>
