задал высоту контекстным изображениям, svg иконки лайков, изображение в video_content растягивается, размеры векторных изображений в html

--- a/source/form.html
+++ b/source/form.html
@@ -54,7 +54,7 @@
       </h1>
       <div class="review-intro page-intro">
         <div class="page-intro__background">
-          <img src="img/text-sedona.svg" alt="SEDONA" class="page-intro__img">
+          <img width="229" height="39" src="img/text-sedona.svg" alt="SEDONA" class="page-intro__img">
         </div>
         <div class="page-intro__decoration"></div>
       </div>
