--- a/source/index.html
+++ b/source/index.html
@@ -59,7 +59,7 @@
             Приветствие
           </h2>
           <div class="intro__background">
-            <img src="img/text-sedona-index.svg" alt="Welcome to SEDONA" class="intro__background-img">
+            <img width="282" height="214" src="img/text-sedona-index.svg" alt="Welcome to SEDONA" class="intro__background-img">
           </div>
           <div class="page-intro__decoration"></div>
         </header>
