--- a/source/photo.html
+++ b/source/photo.html
@@ -54,7 +54,7 @@
       </h1>
       <div class="gallery-intro page-intro">
         <div class="page-intro__background">
-          <img src="img/text-sedona.svg" alt="SEDONA" class="page-intro__img">
+          <img width="229" height="39" src="img/text-sedona.svg" alt="SEDONA" class="page-intro__img">
         </div>
         <div class="page-intro__decoration"></div>
       </div>
@@ -70,15 +70,21 @@
 
           <ul class="gallery__list">
             <li class="gallery__item gallery__item--main photo-card">
-              <img src="img/photo-sunset-mobile@1x.jpg" alt="Фото" class="photo-card__img">
+              <img src="img/photo-sunset-mobile@1x.jpg" alt="Фото" class="photo-card__img photo-card__img--main">
               <div class="photo-card__info card-info">
                 <div class="card-info__description">
                   <h3 class="card-info__title">Неродные просторы</h3>
                   <p class="card-info__author">Автор фото: Борис</p>
                 </div>
                 <div class="card-info__likes likes">
-                  <div class="likes__icon"></div>
-                  <div class="likes__counter">1350</div>
+                  <div class="likes__icon">
+                    <svg class="likes__icon-img" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path opacity="0.3"
+                        d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z"
+                        fill="black" />
+                    </svg>
+                  </div>
+                  <span class="likes__counter">1350</span>
                 </div>
               </div>
             </li>
@@ -90,8 +96,14 @@
                   <p class="card-info__author">Автор фото: Сергей</p>
                 </div>
                 <div class="card-info__likes likes">
-                  <div class="likes__icon"></div>
-                  <div class="likes__counter">143</div>
+                  <div class="likes__icon">
+                    <svg class="likes__icon-img" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path opacity="0.3"
+                        d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z"
+                        fill="black" />
+                    </svg>
+                  </div>
+                  <span class="likes__counter">143</span>
                 </div>
               </div>
             </li>
@@ -103,8 +115,14 @@
                   <p class="card-info__author">Автор фото: Петр</p>
                 </div>
                 <div class="card-info__likes likes">
-                  <div class="likes__icon"></div>
-                  <div class="likes__counter">96</div>
+                  <div class="likes__icon">
+                    <svg class="likes__icon-img" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path opacity="0.3"
+                        d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z"
+                        fill="black" />
+                    </svg>
+                  </div>
+                  <span class="likes__counter">96</span>
                 </div>
               </div>
             </li>
@@ -116,8 +134,14 @@
                   <p class="card-info__author">Автор фото: Антон</p>
                 </div>
                 <div class="card-info__likes likes">
-                  <div class="likes__icon"></div>
-                  <div class="likes__counter">254</div>
+                  <div class="likes__icon">
+                    <svg class="likes__icon-img" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path opacity="0.3"
+                        d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z"
+                        fill="black" />
+                    </svg>
+                  </div>
+                  <span class="likes__counter">254</span>
                 </div>
               </div>
             </li>
