адаптив для intro-bg и advantage-img на главной, заменил advantage-img на фоновое изображение

--- a/source/index.html
+++ b/source/index.html
@@ -96,7 +96,7 @@
                   ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
               </div>
             </div>
-            <img class="advantage__img" src="img/main-city-mobile@1x.jpg" alt="Фото города">
+            <div class="advantage__img advantage__img--city"></div>
             <div class="advantage__details detail">
               <div class="detail__item detail__item--house">
                 <div class="detail__icon">
@@ -184,7 +184,7 @@
                   пройти!<br> Если вы осмелитесь, конечно</p>
               </div>
             </div>
-            <img class="advantage__img" src="img/main-bridge-mobile@1x.jpg" alt="Фото города">
+            <div class="advantage__img advantage__img--bridge"></div>
           </li>
           <!-- /.advantages__item -->
           <li class="advantages__item advantage">
