адаптив карты .map

--- a/source/index.html
+++ b/source/index.html
@@ -236,11 +236,11 @@
       </section>
       <!-- /.booking -->
 
-      <section class="map">
+      <div class="map">
         <div class="map__content">
-          <img src="img/bg-map-mobile@1x.jpg" alt="Карта" class="map__img">
+          <div class="map__img"></div>
         </div>
-      </section>
+      </div>
       <!-- /.map -->
     </div>
     <!-- /.page-main__wrapper -->
