подгонка под pixelperfect главная tablet

--- a/source/index.html
+++ b/source/index.html
@@ -88,8 +88,8 @@
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages__list">
           <li class="advantages__item advantage advantage--explicit">
-            <div class="advantage__header advantage__header--explicit advantage__header--city">
-              <div class="advantage__header-wrapper">
+            <div class="advantage__header advantage__header--explicit">
+              <div class="advantage__header-wrapper advantage__header-wrapper--city">
                 <h3 class="advantage__title advantage__title--explicit text-title">НАСТОЯЩИЙ<br> ГОРОДОК</h3>
                 <p class="advantage__number advantage__number--explicit text-description">— №1 —</p>
                 <p class="advantage__description advantage__description--explicit text-description">СЕДОНА НЕ АТТРАКЦИОН
@@ -168,7 +168,7 @@
 
                 <div class="detail__header detail__header--food">
                   <p class="detail__title text-title text-title--detail">ЕДА</p>
-                  <p class="detail__description text-description">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ
+                  <p class="detail__description text-description">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, <br>Вы НЕ
                     разочаруетесь!</p>
                 </div>
               </div>
@@ -176,8 +176,8 @@
           </li>
           <!-- /.advantages__item -->
           <li class="advantages__item advantage advantage--explicit advantage--reverse">
-            <div class="advantage__header advantage__header--explicit advantage__header--bridge">
-              <div class="advantage__header-wrapper advantage__header-wrapper">
+            <div class="advantage__header advantage__header--explicit ">
+              <div class="advantage__header-wrapper advantage__header-wrapper--bridge">
                 <h3 class="advantage__title advantage__title--explicit text-title">ТАМ ЕСТЬ<br> МОСТ ДЬЯВОЛА</h3>
                 <p class="advantage__number advantage__number--explicit text-description">— №2 —</p>
                 <p class="advantage__description advantage__description--explicit text-description">Да, по нему можно
