адаптив .video через фон изобр

--- a/source/photo.html
+++ b/source/photo.html
@@ -196,7 +196,7 @@
               билетами, пока они не подорожали в очередной раз!</p>
           </div>
           <div class="video__content">
-            <img src="img/video-mobile@1x.jpg" alt="Видео" class="video__img">
+            <div class="video__img"></div>
           </div>
           <div class="video__player player">
             <div class="player__volume">
