размеры векторных изображений в html

--- a/source/index.html
+++ b/source/index.html
@@ -255,19 +255,19 @@
           <li class="social__item">
             <a href="#" class="social__link social__link--twitter">
               <span class="visually-hidden">Мы в Twitter</span>
-              <img class="social__link-icon" src="img/icon-twitter.svg" alt="Twitter">
+              <img width="46" height="48" class="social__link-icon" src="img/icon-twitter.svg" alt="Twitter">
             </a>
           </li>
           <li class="social__item">
             <a href="#" class="social__link social__link--facebook">
               <span class="visually-hidden">Мы на Facebook</span>
-              <img class="social__link-icon" src="img/icon-facebook.svg" alt="Facebook">
+              <img width="46" height="48" class="social__link-icon" src="img/icon-facebook.svg" alt="Facebook">
             </a>
           </li>
           <li class="social__item">
             <a href="#" class="social__link social__link--youtube">
               <span class="visually-hidden">Мы на YouTube</span>
-              <img class="social__link-icon" src="img/icon-youtube.svg" alt="YouTube">
+              <img width="46" height="48" class="social__link-icon" src="img/icon-youtube.svg" alt="YouTube">
             </a>
           </li>
         </ul>
