--- a/source/form.html
+++ b/source/form.html
@@ -2,7 +2,8 @@
 <html class="page" lang="en">
 
 <head>
-  <meta name="viewport" content="width=device-width,initial-scale=1" charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -195,6 +196,8 @@
         <!-- /.review-form -->
       </section>
       <!-- /.review -->
+    </div>
+    <!-- /.page-main__wrapper -->
   </main>
   <!-- /.page-main -->
 
@@ -241,8 +244,8 @@
   </footer>
   <!-- /.page-footer -->
 
-  <script type="text/javascript" src="js/main-nav.js"></script>
-  <script type="text/javascript" src="js/form-submit.js"></script>
+  <script src="js/main-nav.js"></script>
+  <script src="js/form-submit.js"></script>
 </body>
 
 </html>
