--- a/source/photo.html
+++ b/source/photo.html
@@ -2,7 +2,8 @@
 <html class="page" lang="en">
 
 <head>
-  <meta name="viewport" content="width=device-width,initial-scale=1" charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -288,7 +289,7 @@
   </footer>
   <!-- /.page-footer -->
 
-  <script type="text/javascript" src="js/main-nav.js"></script>
+  <script src="js/main-nav.js"></script>
 </body>
 
 </html>
