--- a/source/index.html
+++ b/source/index.html
@@ -2,7 +2,8 @@
 <html class="page" lang="ru">
 
 <head>
-  <meta name="viewport" content="width=device-width,initial-scale=1" charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -30,7 +31,6 @@
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
               <a class="site-list__link">Главная</a>
-            </li>
             </li>
             <li class="site-list__item">
               <a class="site-list__link" href="photo.html">Фото и видео</a>
@@ -290,7 +290,7 @@
   </footer>
   <!-- /.page-footer -->
 
-  <script type="text/javascript" src="js/main-nav.js"></script>
+  <script src="js/main-nav.js"></script>
 </body>
 
 </html>
