ссылка на курс в иконке в футере

--- a/source/photo.html
+++ b/source/photo.html
@@ -274,7 +274,7 @@
       <!-- /.social -->
       <div class="page-footer__copyright copyright">
         <span class="copyright__text text-copyright">Разработано</span>
-        <a class="copyright__link">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <svg class="copyright__icon" width="27" height="34" viewBox="0 0 27 35" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path
