оформил ссылку на бронь гостиницы

--- a/source/index.html
+++ b/source/index.html
@@ -230,7 +230,7 @@
             <p class="booking__text text-description text-description--sub">Укажите предполагаемые даты поездки,<br> и мы
               покажем вам лучшие предложения гостиниц в седоне</p>
           </div>
-          <button class="button button--booking" type="button">НАЙТИ гостиницу</button>
+          <a class="booking__link" href="booking.html">НАЙТИ гостиницу</a>
         </div>
         <!-- /.booking__wrapper -->
       </section>
