декор для adbantage__header

--- a/source/index.html
+++ b/source/index.html
@@ -188,7 +188,7 @@
           </li>
           <!-- /.advantages__item -->
           <li class="advantages__item advantage">
-            <div class="advantage__header">
+            <div class="advantage__header advantage__header--decor">
               <div class="advantage__header-wrapper">
                 <h3 class="advantage__title text-title">НЕБОЛЬШАЯ<br> ПЛОЩАДЬ</h3>
                 <p class="advantage__number text-description">— №3 —</p>
@@ -198,7 +198,7 @@
           </li>
           <!-- /.advantages__item -->
           <li class="advantages__item advantage">
-            <div class="advantage__header">
+            <div class="advantage__header advantage__header--decor">
               <div class="advantage__header-wrapper">
                 <h3 class="advantage__title text-title">КРАСИВАЯ<br> ДОРОГА</h3>
                 <p class="advantage__number text-description">— №4 —</p>
@@ -209,7 +209,7 @@
           </li>
           <!-- /.advantages__item -->
           <li class="advantages__item advantage">
-            <div class="advantage__header">
+            <div class="advantage__header advantage__header--decor">
               <div class="advantage__header-wrapper">
                 <h3 class="advantage__title text-title">МАЛО<br> ТУРИСТОВ</h3>
                 <p class="advantage__number text-description">— №5 —</p>
